--- a/spoonywritters/tamplates/conductus.html
+++ b/spoonywritters/tamplates/conductus.html
@@ -27,7 +27,7 @@
         <a href="mailto:mwangangimusyoka1998@gmail.com">mwangangimusyoka1998@gmail.com</a><br><br>
      <label>
          live chat:<i class="fas fa-sms"></i>
-         <a href="/esyhippo/ChatApp/chat.php">click here!</a>
+         <a href="#">click here!</a>
      </label><br><br>
      Tel :<i class="fas fa-phone"></i>
      <a href="tel:+254742572324">call support</a>
